Changes to index.html, Adding Project 2 and fixing alignment issue
Fixed an alignment issue with project 1, added Project 2 and hooked it up to my Github repo (which I just made public). Project 3 displays "coming soon" now.

--- a/styles.css
+++ b/styles.css
@@ -603,6 +603,15 @@
   text-align: center;
 }
 
+.services__card h3 {
+  margin-left: 4px;
+  margin-right: 4px;
+  margin-top: 10px;
+  text-align: center;
+  color: #ffffff
+}
+
+
 .services__card p {
   text-align: center;
   margin-top: 24px;
